--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 		<servlet.api.version>3.1.0</servlet.api.version>
 		<jsp.api.version>2.0</jsp.api.version>
 		<jsp.jstl.version>1.2</jsp.jstl.version>
+		<junit.version>4.12</junit.version>
+		<slf4j.version>1.7.18</slf4j.version>
 		<spring.framework.version>4.2.5.RELEASE</spring.framework.version>
 	</properties>
 
@@ -94,6 +96,25 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.framework.version}</version>
+		</dependency>
+		<!-- slf4j -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<!-- junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- sprinng test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
 			<version>${spring.framework.version}</version>
 		</dependency>
 	</dependencies>
