--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 		<!-- junit -->
 		<dependency>
