--- a/pom.xml
+++ b/pom.xml
@@ -8,31 +8,23 @@
 	<name>apache-tiles-example</name>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jetty.maven.plugin-version>9.3.2.v20150730</jetty.maven.plugin-version>
-		<java-version>1.8</java-version>
-		<tiles.request-version>1.0.6</tiles.request-version>
-		<tiles-version>3.0.5</tiles-version>
-		<servlet.api.version>3.1.0</servlet.api.version>
-		<jsp.api.version>2.0</jsp.api.version>
 		<jsp.jstl.version>1.2</jsp.jstl.version>
+		<jsp.api.version>2.0</jsp.api.version>
 		<junit.version>4.12</junit.version>
-		<slf4j.version>1.7.18</slf4j.version>
-		<spring.framework.version>4.3.3.RELEASE</spring.framework.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<servlet.api.version>3.1.0</servlet.api.version>
+		<slf4j.version>1.7.22</slf4j.version>
+		<spring.framework.version>4.3.5.RELEASE</spring.framework.version>
+		<tiles.request-version>1.0.6</tiles.request-version>
+		<tiles-version>3.0.7</tiles-version>
 	</properties>
 
 	<build>
 		<finalName>apache-tiles-example</finalName>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5</version>
-				<configuration>
-					<target>${java-version}</target>
-					<source>${java-version}</source>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
@@ -52,7 +44,6 @@
 					</webApp>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
 
@@ -75,11 +66,11 @@
 		</dependency>
 		<!-- Servlet 3.1.0 and JSTL -->
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
+			<groupId>javax.servlet.jsp.jstl</groupId>
+			<artifactId>jstl-api</artifactId>
 			<version>${jsp.jstl.version}</version>
-			<scope>compile</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -90,7 +81,6 @@
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
 			<version>${jsp.api.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<!-- Spring -->
 		<dependency>
